Tests/context/invalid/class17.java
class A{
    int a;
    float b;

    if(true){
        a=1;
    }else{
        a=2;
    }
}